@@ -828,6 +828,9 @@ if (!disableBatteryLoading)
 		free(fn);
 	}
 
+	extern char LoadedRomFName[2048];
+	strcpy(LoadedRomFName,name); //For the debugger list
+
 	GameInfo->type=GIT_FDS;
 	GameInterface=FDSGI;
 
